--- a/css/style.css
+++ b/css/style.css
@@ -17,7 +17,8 @@ span {color: #0A81FF;}
 .goals{font-size: 25px;color:#99FF0D;margin-left: 70px;line-height: 2.2;}
 
 .pic{ margin: auto; margin-top:100px ;display: block;}
-
+.myWork{list-style-type: circle;}
+.fruits{font-size: 17px;color:#99FF0D;margin-left: 70px;line-height: 2.2;list-style-type: decimal;}
 
 
 footer{background-color: #0403FF;
