--- a/css/style.css
+++ b/css/style.css
@@ -1,29 +1,128 @@
-body{background-color: #000C25;height: 100%; width: 100%;}
-header{background-color: rgb(10, 129, 255);padding-bottom: 5px;}
-header h1{font-size:75px;background-color: #0A81FF;text-align:center;}
-header nav ul{text-align: center;padding-top: 10px;}
-header nav ul li{display: inline-block; padding:5px 20px 5px 20px ;margin: 5px;
-background-color: #CDFF03;}
-a{color: black; text-decoration: none;}
-article{margin-top: 50px;}
-main article h3{font-size: 50px;margin-left:50px ;text-decoration:underline;
-color: #FF2000;
+body{
+    position: relative;
+    background-color: #000C25;
+    height: 100%; width: 100%;
 }
-.name {font-size: 25px;color:#99FF0D;margin-left: 70px;line-height: 2.2;}
+.header {
+    z-index: 1;
+    height: 50px;
+    background-color: rgb(10, 129, 255);
+    padding-bottom: 5px;
+    position: sticky;
+    top: 0;
+}
+nav {
+    /* display: inline-block; */
+    float: right;
+}
+header h1 {
+    padding-left: 36px;
+    font-size: 50px;
+    background-color: #0A81FF;
+    text-align: center;
+    float: left;
+    letter-spacing: 6px;
+    font-family: monospace;
+}
+header nav ul{
+    text-align: center;
+    padding-top: 10px;
+}
+header nav ul li {
+    border-radius: 100px 0px;
+    display: inline-block;
+    padding: 5px 20px 5px 20px;
+    margin: 5px;
+    background-color: #CDFF03;
+}
+a{color: black; 
+    text-decoration: none;
+}
+a:hover {
+    color: rgb(163, 13, 13);
+}
+main{
+    margin-top: 40px;
+}
+
+.section {
+    width: 600px;
+    float: left;
+    block-size: 230px;
+}
+
+article{
+    margin-top: 330px;
+}
+
+.h3 {
+    font-weight: bold;
+    font-size: 30px;
+    margin-left: 50px;
+    text-decoration: underline;
+    color: #FF2000;
+}
+.name {
+    font-size: 25px;
+    color:#99FF0D;
+    margin-left: 70px;
+    line-height: 2.2;
+}
 
 /* #aboutMe{background-color: rgb(34, 43, 43);color: darkgray;
 margin: 25px;font-size: 20px;   line-height: 1.2;} */
-span {color: #0A81FF;}
-.goals{font-size: 25px;color:#99FF0D;margin-left: 70px;line-height: 2.2;}
+span {
+    color: #0A81FF;
+}
+.goals{
+    font-size: 25px;
+    color:#99FF0D;
+    margin-left: 70px;
+    line-height: 2.2;
+}
 
-.pic{ margin: auto; margin-top:100px ;display: block;}
-.myWork{list-style-type: circle;}
-.fruits{font-size: 17px;color:#99FF0D;margin-left: 70px;line-height: 2.2;list-style-type: decimal;}
+.pic {
+    visibility: visible;
+    position: absolute;
+    border: solid lightblue 2px;
+    margin-top: 80px;
+    /* display: block; */
+    width: 300px;
+    height: 168px;
+    /* float: left; */
+    margin-left: 35%;
+    /* margin-bottom: 75px; */
+}
+.revolve:hover{
+    filter: alpha(opacity=50);
+    opacity: 0;
+    -webkit-transition: opacity .3s ease-in-out;
+    -moz-transition: opacity .3s ease-in-out;
+    -ms-transition: opacity .3s ease-in-out;
+    -o-transition: opacity .3s ease-in-out;
+    transition: opacity .3s ease-in-out;
+    
+
+}
+
+.myWork{
+    list-style-type: circle;
+}
+.fruits{
+    font-size: 17px;
+    color:#99FF0D;
+    margin-left: 70px;
+    line-height: 2.2;
+    list-style-type: decimal;
+}
 
 
-footer{background-color: #0403FF;
-text-align: center;
-bottom: 0;
-
-color: yellow;}
+footer {
+    background-color: #0403FF;
+    text-align: center;
+    bottom: 0;
+    color: yellow;
+    position: relative;
+    margin-top: 70%;
+}
 
